StreetSide: Update to official API
This also moves the plugin to Java 21 (mostly for virtual threads), reformats the
code to match the JOSM standard (4 spaces), and fixes a bunch of lint issues.

Additionally, a lot of cruft from when this plugin was copied from Mapillary was
removed. That was largely related to image import, uploading, and login.

git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36228 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4